# Rust-Small-projects

Axum Projects/hello_world/src/: main.rs
Axum Projects/rust_notes_rest_API/: .env  Cargo.toml  docker-compose.yml
Axum Projects/rust_notes_rest_API/src/: handler.rs  main.rs  model.rs  route.rs  schema.rs
Chat/client/src/: main.rs
Chat/server/src/: main.rs
cli-downloader/: Cargo.toml
cli-downloader/src/: errors.rs  main.rs
compress_files/: Cargo.toml
compress_files/src/: main.rs
decompress_files/: Cargo.toml  Task_03
decompress_files/src/: main.rs
editor/: Cargo.toml
editor/js/: index.js
editor/src/: lib.rs
file_format_parser/: Cargo.toml
file_format_parser/src/: main.rs
internet_speed_tester/: Cargo.toml
internet_speed_tester/src/: main.rs
read-json-rust/: Cargo.toml
read-json-rust/src/: main.rs
rust-crud-sql-api/: .env  Cargo.toml  README.md
rust_auth/: .env  README.md
rust_csv/: Cargo.toml
rust_csv/src/: main.rs
rusty-llama/: Cargo.toml
rusty-llama/src/: api.rs  app.rs  lib.rs  main.rs
rusty-llama/src/model/: conversation.rs
tax-webassembly/: README.md
tax-webassembly/src/: index.html  lib.rs  style.css  tax.js
write-json-rust/src/: main.rs
