[package]
name = "internet_speed_tester"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] } # Use blocking for simplicity
tokio = { version = "1.0", features = ["full"] } # For async if needed later
colored = "2.0" # For colored output