[package]
name = "rust-crud-sql"
version = "0.1.0"
authors = ["Leonardo Devai <leonardo@devai.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0.81"
argonautica = "0.2.0"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "json"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
warp = "0.3.6"
hyper = "0.14.11"
cookie = "0.18.1"


[[bin]]
name = "rust-crud-sql"
path = "src/main.rs"
